# daedalus

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODE_REVIEW_REPORT.md  Cargo.toml  README.md  codebase-doc-agent.md  codebase-doc-orchestrator.md  knowledge-distill-agent.md  mcp.json.bak
config/: daedalus.yaml
docs/: .progress.md  INDEX.md  agent-optimization-plan.md  context-pressure-aware-tool-loop.md
docs/constraints/: daedalus-runtime-constraints.md
docs/design/: code-quality-review.md  context-compression-optimization.md  daedalus-trait-based-architecture.md  improvement-roadmap-2026-05.md  long-horizon-agent-optimization.md  performance-gap-analysis.md  prompt-optimization-analysis.md
docs/rules/: daedalus-coding-conventions.md
docs/tuning/: agent-robustness-audit-2026-04-25.md  code-review-trace-analysis-2026-04-25-v2.md  code-review-trace-analysis-2026-04-25-v3.md  code-review-trace-analysis-2026-04-25-v4.md  code-review-trace-analysis-2026-04-25-v5.md  code-review-trace-analysis-2026-04-25-v6.md  code-review-trace-analysis-2026-04-25.md  code-review-trace-analysis-2026-05-17.md
examples/: test_api.rs  test_deser.rs
src/: agent.rs  cli.rs  config.rs  logging.rs  main.rs  session.rs  workspace.rs
src/acp/: agent_card.rs  client.rs  http_client.rs  mod.rs  server.rs  tool.rs  transport.rs  types.rs
src/agent/: chat.rs  core_handler.rs  duplicate_detector.rs  mod.rs  session.rs  tool_loop.rs  tool_router.rs
src/agent/tool_loop/: mod.rs  (+5 more)
src/cli/: cli_args.rs  commands.rs  completer.rs  context_analysis.rs  cost.rs  mod.rs  output_format.rs  print_runner.rs  render.rs  repl.rs
src/config/: agent_config.rs  loader.rs  logging.rs
src/embedding/: mod.rs  openai.rs
src/hooks/: config.rs  executor.rs  middleware.rs  mod.rs
src/llm/: cache_monitor.rs  genai_provider.rs  mod.rs  model_registry.rs  provider.rs  types.rs  venus_provider.rs
src/mcp/: client.rs  config.rs  manager.rs  mod.rs  types.rs
src/memory/: factory.rs  long_term.rs  mod.rs  persistence.rs  sliding_window.rs  traits.rs  utils.rs
src/middleware/: config.rs  mod.rs  pipeline.rs
src/prompt/: inputs.rs  mod.rs  shared_reminders.rs
src/skill/: loader.rs  mod.rs  registry.rs
src/subagent/: builtins.rs  isolation.rs  loader.rs  mod.rs  prompt.rs  registry.rs  runner.rs  tool.rs  types.rs
src/tools/: bash.rs  checkpoint.rs  edit_file.rs  fs.rs  fs_utils.rs  get_file_info.rs  grep_search.rs  list_directory.rs  mod.rs  multi_edit.rs  plan.rs  read_file.rs  recall_history.rs  search_files.rs  session_state.rs  take_note.rs  text_utils.rs  write_file.rs
src/tracing/: collector.rs  config.rs  context.rs  hook.rs  manager.rs  mod.rs  types.rs
(+130 files in other folders)
