[package]
name = "daedalus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
genai = "0.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[dev-dependencies]
tokio = { version = "1.44", features = ["full", "test-util"] }
