[package]
name = "daedalus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
chrono = "0.4"
crossterm = "0.28"
genai = "0.5.3"
indicatif = "0.17"
termimad = "0.30"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
tokio = { version = "1.44", features = ["full"] }
rustyline = { version = "15.0", features = ["derive"] }
tracing = "0.1.44"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "time", "local-time"] }

[dev-dependencies]
tokio = { version = "1.44", features = ["full", "test-util"] }
