[package]
name = "daedalus"
version = "0.1.0"
edition = "2024"

[features]
# Optional: enable the `spawn_team` built-in tool (parallel multi-agent
# execution). Off by default — the single `spawn_subagent` tool covers
# the vast majority of use cases and `spawn_team` is experimental.
team = []

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
futures = "0.3"
genai = "0.5.3"
indicatif = "0.17"
once_cell = "1.19"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "stream"] }
termimad = "0.30"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
tokio = { version = "1.44", features = ["full"] }
tokio-stream = "0.1"
rustyline = { version = "15.0", features = ["derive"] }
tracing = "0.1.44"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "time", "local-time"] }

[dev-dependencies]
tokio = { version = "1.44", features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }
